# whodunnitbro

./: .buildpacks  .gitignore  pyproject.toml  render.yaml  requirements.txt
backend/cpp_engine/: CMakeLists.txt  py_wrapper.cpp  test_engine.py
backend/cpp_engine/src/: main.cpp
backend/cpp_engine/src/core/: engine.cpp  engine.h  story_manager.cpp  story_manager.h  utils.cpp  utils.h
backend/cpp_engine/src/data_structures/: avl_tree.cpp  avl_tree.h  graph.cpp  graph.h  linked_list.cpp  linked_list.h  rb_tree.cpp  rb_tree.h
backend/cpp_engine/src/models/: case.cpp  case.h  character.cpp  character.h  suspect.cpp  suspect.h
backend/python_api/: _probe_api.py  app.py  engine_context.py  test_api.py  whodunnit.py
frontend/: app.js  game.html  game.js  index.html  package.json  server.py  styles.css
